modified media query

--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,10 @@ body {
         width: 100%;
     }
 }
+
+/* bigger laptop*/
+@media(max-width: 1024px  ) {
+    .card {
+        width: 31%;
+    }
+}
